--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "transplantr",
+  "name": "react-transplantr",
   "version": "0.1.0",
   "description": ".",
   "main": "server.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "PDX Transplants: Gloria Anholt, Mugsy Carter, Risa Fletcher, Nathan Hugon",
+  "author": "PDX Transplants React Reboot: Gloria Anholt",
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.3",
@@ -16,10 +16,10 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/GloriaAnholt/Transplantr.git"
+    "url": "git+https://github.com/GloriaAnholt/React-Transplantr.git"
   },
   "bugs": {
-    "url": "https://github.com/GloriaAnholt/Transplantr/issues"
+    "url": "https://github.com/GloriaAnholt/React-Transplantr/issues"
   },
-  "homepage": "https://github.com/GloriaAnholt/Transplantr#readme"
+  "homepage": "https://github.com/GloriaAnholt/React-Transplantr#readme"
 }
