--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
